# betaradio

./: ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  betaradio_1.2.orig.tar.bz2.delta  betaradio_1.2.orig.tar.bz2.id  betaradio_1.3.orig.tar.bz2.delta  betaradio_1.3.orig.tar.bz2.id  betaradio_1.4.orig.tar.bz2.delta  betaradio_1.4.orig.tar.bz2.id  betaradio_1.5.orig.tar.bz2.delta  betaradio_1.5.orig.tar.bz2.id  betaradio_1.6.orig.tar.xz.delta  betaradio_1.6.orig.tar.xz.id  config.h.in  configure  configure.ac  index.html  mkdeb.sh
data/: Makefile.am  Makefile.in  betaradio.desktop.in
debian/: README  changelog  control  copyright  rules  watch
debian/patches/: 00_dont_install_header  debian-changes-1.2-1  fix_desktop.patch  series
man/: Makefile.in  betaradio.1
po/: Makevars  POTFILES.in  betaradio.pot  zh_TW.gmo  zh_TW.po
src/: Makefile.am  Makefile.in  any-tray-icon.c  any-tray-icon.h  any_tray_icon.c  any_tray_icon.h  betaradio.c  betaradio.vala  channel.c  channel.h  eggtrayicon.c  gst_player.c  gst_player.vala  gstplay.c  gstplay.h  json_cat.c  json_cat.h  json_soup.c  json_soup.vala  radiosite.c  radiosite.h  sitelist.h  streamplayer.h
utils/: academic.json  channel.yaml  hichannel.html  hichannel.json  hichannel.py  hichannel.yaml  list.json  player.css  player.html  player.js  ptt.json
vapi/: Makefile.am  Makefile.in  any-tray-icon.vapi  any_tray_icon.vapi
web/: hichannel.json  player.html  player.js
