EXTRA_DIST = \
             betaradio.png \
             betaradio.desktop.in

icon32dir = @datadir@/icons/hicolor/32x32/apps/
icon32_DATA = 32x32/betaradio.png

icon48dir = @datadir@/icons/hicolor/48x48/apps/
icon48_DATA = 48x48/betaradio.png

icon128dir = @datadir@/icons/hicolor/128x128/apps/
icon128_DATA = 128x128/betaradio.png

desktopdir = @datadir@/applications
desktop_DATA = betaradio.desktop
